// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeoService generateRobotsTxt robots are allowed 1`] = `
"User-agent: *
Allow: /
Sitemap: hostname/sitemap.xml"
`;

exports[`SeoService generateRobotsTxt robots are not allowed 1`] = `
"User-agent: *
Disallow: /
Sitemap: hostname/sitemap.xml"
`;

exports[`SeoService generateSitemap 1`] = `
"<urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\"><url>
      <loc>надя-вяжет.рф/мужскои-жакет-с-воротником-стоикои/</loc>
      <lastmod>2021-01-11T20:00:00.000Z</lastmod>
      </url><url>
      <loc>надя-вяжет.рф/post2/</loc>
      <lastmod>2021-01-12T20:00:00.000Z</lastmod>
      </url></urlset>"
`;
